--- a/drivers/media/platform/msm/Kconfig
+++ b/drivers/media/platform/msm/Kconfig
@@ -9,6 +9,10 @@ menuconfig SPECTRA_CAMERA
       Enabling this adds support for the camera driver stack including sensor,
       IFE and postprocessing drivers.
 
+config USE_BU64748
+    bool "use BU64748 acculator"
+    default n
+
 source "drivers/media/platform/msm/vidc_3x/Kconfig"
 
 menuconfig MSM_CAMERA
