--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,8 @@ kernel/configs/android-*.cfg
 #Ignoring Android.bp link file
 #
 Android.bp
+arch/arm64/boot/dts/qcom-sdm845/
+arch/arm64/boot/dts/xiaomi/
+build.sh
+out/
+techpack/mi845/
